
Unreleased
----------

- LP #530893 Updated mail sending code to use repoze.sendmail 2.0.

- LP #520570:  redirect '/favicon.ico' requests onto the correct static
  URL, and 'rss_view.xml' requests to the equivalent 'atom.xml' URLs.

- LP #530893 Added handling for RFC 2047 (Unicode) headers to all generated
  emails.

- LP #530893 Added handling for RFC 2047 (Unicode) headers to mailin.

=======
3.21 (2010-03-06)
-----------------

- Created a default policy for IShowSendalert.  Refactored code to use a
  utility method, get_show_sendalert, to get whether or not to show a send
  alert checkbox in a form adding content.

3.20 (2010-03-04)
-----------------

- Updated bootstrap to provide new 'name' parameter to add_intranet_view when
  creating offices.

- LP #530966, CSS fix for profile bug.  (Derek via Paul)

3.19 (2010-03-02
----------------

- LP #526574: Fixed the workflow association with the forum topic add and edit
  views so the creator of the topic will have edit / delete permissions;
  added evolve6.py function to fix existing topics. (rafrombrc)

- LP #497017: Added a separate 'name' field to the intranets add form
  (rafrombrc)

- LP #528514: Specified the right widget type for blog post 'send email?'
  field, added CSS to make the formish title fields the right size. (rafrombrc)

- Fixed bug with people import where updating a profile might use a different
  user id than the profile.__name__.

- LP #522179: Added template slots and admin UI for generating announcement
  blurbs that will be exposed to all site users. (rafrombrc)

- LP #523280: Rejigger formish views and templates to put page_title value in
  TemplateAPI object instead of passing it directly into the template
  (rafrombrc)

- LP #520541 Updated adduser console script to also create a user profile.
  Added checks to avoid clobbering an existing user.

3.18 (2010-02-22)
-----------------

- Fix for memory leak in mailin process.

- UI fixes.  (ree)


3.17 (2010-02-17)
-----------------
